otelcol/overlays/dso/otelcol-dso-otlpgrpc-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx

    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
  name: otelcol-dso-otlpgrpc-external
  namespace: observability
spec:
  rules:
    - host: otelcol-grpc.dev.metatron.app
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: otelcol-dso-collector
                port:
                  number: 4317
  # This section is only required if TLS is to be enabled for the Ingress
  tls:
    - hosts:
        - otelcol-grpc.dev.metatron.app
      secretName: grandview-dev-tls
